--- a/src/sass/plugin.scss
+++ b/src/sass/plugin.scss
@@ -7,9 +7,9 @@
 	@extend %input;
 
 	cursor: pointer;
-	display: grid;
-	grid-template-columns: repeat(10, 1fr);
-	grid-template-rows: repeat(auto-fit, 10px);
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	height: calc(var(--bld-us) * 3);
 	overflow: hidden;
 	position: relative;
@@ -39,47 +39,46 @@
 		position: absolute;
 		top: 50%;
 	}
+
+	// https://css.gg/software-upload
 	&_icon {
-		// https://css.gg/software-upload
-		.gg-software-upload {
-			box-sizing: border-box;
-			position: relative;
-			display: block;
-			transform: scale(var(--ggs, 1));
-			width: 16px;
-			height: 6px;
-			border: 2px solid;
-			border-top: 0;
-			border-bottom-left-radius: 2px;
-			border-bottom-right-radius: 2px;
-			margin-top: 8px;
-		}
+		box-sizing: border-box;
+		position: relative;
+		display: block;
+		transform: scale(var(--ggs, 1));
+		width: 16px;
+		height: 6px;
+		border: 2px solid;
+		border-top: 0;
+		border-bottom-left-radius: 2px;
+		border-bottom-right-radius: 2px;
+		margin-top: 8px;
+	}
 
-		.gg-software-upload::after {
-			content: '';
-			display: block;
-			box-sizing: border-box;
-			position: absolute;
-			width: 8px;
-			height: 8px;
-			border-left: 2px solid;
-			border-top: 2px solid;
-			transform: rotate(45deg);
-			left: 2px;
-			bottom: 4px;
-		}
+	&_icon::after {
+		content: '';
+		display: block;
+		box-sizing: border-box;
+		position: absolute;
+		width: 8px;
+		height: 8px;
+		border-left: 2px solid;
+		border-top: 2px solid;
+		transform: rotate(45deg);
+		left: 2px;
+		bottom: 4px;
+	}
 
-		.gg-software-upload::before {
-			content: '';
-			display: block;
-			box-sizing: border-box;
-			position: absolute;
-			border-radius: 3px;
-			width: 2px;
-			height: 10px;
-			background: currentColor;
-			left: 5px;
-			bottom: 3px;
-		}
+	&_icon::before {
+		content: '';
+		display: block;
+		box-sizing: border-box;
+		position: absolute;
+		border-radius: 3px;
+		width: 2px;
+		height: 10px;
+		background: currentColor;
+		left: 5px;
+		bottom: 3px;
 	}
 }
