--- a/src/sass/plugin.scss
+++ b/src/sass/plugin.scss
@@ -29,6 +29,8 @@
 		opacity: 0.5;
 		position: absolute;
 		right: 2px;
+		margin: 0.2rem;
+		text-align: right;
 	}
 	&_frac {
 		background-color: var(--in-fg);
