feat: Adding drag and drop.

--- a/src/sass/plugin.scss
+++ b/src/sass/plugin.scss
@@ -13,7 +13,7 @@
 	overflow: hidden;
 	position: relative;
 
-	border: 1px dashed #bbb;
+	border: 1px dashed #717070;
 	-webkit-border-radius: 5px;
 	border-radius: 5px;
 
