--- a/src/sass/plugin.scss
+++ b/src/sass/plugin.scss
@@ -67,7 +67,7 @@
 		border-bottom-left-radius: 2px;
 		border-bottom-right-radius: 2px;
 		margin-top: 8px;
-		opacity: .5;
+		opacity: 0.5;
 	}
 
 	&_icon::after {
