--- a/src/sass/plugin.scss
+++ b/src/sass/plugin.scss
@@ -25,7 +25,7 @@
 		// You can use CSS variables for styling. See declarations for details:
 		// ../../node_modules/@tweakpane/core/lib/sass/common/_defs.scss
 
-		color: var(--in-fg);
+		color: tp.cssVar('input-fg');
 
 		bottom: 2px;
 		display: inline-block;
@@ -45,7 +45,7 @@
 	}
 
 	&_frac {
-		background-color: var(--in-fg);
+		background-color: tp.cssVar('input-fg');
 		border-radius: 1px;
 		height: 2px;
 		left: 50%;
