fix: Fixing CSS and updating package.json

--- a/src/sass/plugin.scss
+++ b/src/sass/plugin.scss
@@ -43,7 +43,7 @@
 		word-wrap: break-word;
 		text-align: right;
 		width: 100%;
-		margin-top: var(--cnt-vp);
+		margin-top: var(--cnt-h-p);
 	}
 
 	&_text {
